Deleted example code and added version and Enviroment of the project.

--- a/GestorTareas/appsettings.json
+++ b/GestorTareas/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Application": {
+    "Version": "1.0.0",
+    "Environment": "Development"
+  }
 }
+
+
