--- a/GestorTareas.Tests/GestorTareas.Tests.csproj
+++ b/GestorTareas.Tests/GestorTareas.Tests.csproj
@@ -1,12 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +15,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GestorTareas\GestorTareas.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
+    <Using Include="Xunit.Abstractions" />
+    <Using Include="Moq" />
+    <Using Include="Microsoft.EntityFrameworkCore" />
+    <Using Include="Microsoft.EntityFrameworkCore.InMemory" />
+    <Using Include="Microsoft.AspNetCore.Mvc.Testing" />
+    <Using Include="GestorTareas" />
   </ItemGroup>
 
 </Project>
